--- a/styles/style.css
+++ b/styles/style.css
@@ -16,10 +16,10 @@ h1{
 }
 
 main{
-  min-width: 100%;
-  min-height: 100vh;
+  width: 100%;
+  height: 500px;
   display: flex;
-  margin-top: 50px;
+  margin-top: 30px;
   justify-content: center;
 }
 
@@ -174,6 +174,6 @@ main{
 
 footer{
   text-align: center;
-  margin-top: -200px;
+  margin-top: -30px;
   color: #3c1d6b;
 }
