--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,8 @@
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+
+
 body{
   background-color: #6f8b94;
 }
@@ -174,6 +176,6 @@ main{
 
 footer{
   text-align: center;
-  margin-top: -30px;
   color: #3c1d6b;
+  margin-bottom: 0;
 }
